# IL3820_AzSphereSK_Demo_Project

./: README.md
IL3820_AzSphereSK_Demo_Project/: launch.vs.json
IL3820_AzSphereSK_Demo_Project/EPD/: AzSphere_Interface.c  AzSphere_Interface.h  IL3820_2in9_Driver.c  IL3820_2in9_Driver.h
IL3820_AzSphereSK_Demo_Project/HighLevelCore/: CMakeLists.txt  CMakeSettings.json  IL3820_AzSphere_Driver.c  IL3820_AzSphere_Driver.h  ImageData.c  ImageData.h  app_manifest.json  applibs_versions.h  launch.vs.json  logo.c  logo.h  main.c
IL3820_AzSphereSK_Demo_Project/RealTimeCore/: CMakeLists.txt  app_manifest.json  launch.vs.json
